Logic changes, aliases and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # set -g status
 # look good
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 # act like GNU screen
 set -g prefix C-a
 # a mouse
@@ -18,3 +18,4 @@ bind ^A select-pane -t :.+
 
 # History 
 set -g history-limit 30000
+set -g set-clipboard on
