Added bin to the path and iterm preferences changes

--- a/apps/iterm2_preferences/com.googlecode.iterm2.plist
+++ b/apps/iterm2_preferences/com.googlecode.iterm2.plist
@@ -17,7 +17,7 @@
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/MyTerminalConfig/iterm2_preferences</string>
+	<string>~/MyTerminalConfig/apps/iterm2_preferences</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{712, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -56,11 +56,11 @@
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>530 493 620 392 0 0 1680 1050 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>376 363 796 486 0 0 1680 1050 </string>
+	<string>-1126 899 796 486 -1440 -525 1440 2560 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
-	<string>1910 1021 592 584 1680 188 2560 1417 </string>
+	<string>-1440 1428 592 584 -1440 -525 1440 2537 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>-1440 -525 825 502 -1440 -525 1440 2560 </string>
+	<string>1 497 825 502 0 0 1680 1050 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -704,6 +704,10 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>1011161B-1B78-40C7-A23B-4FFC6A4747B6</string>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>1</integer>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
@@ -746,7 +750,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/josechirivella/MyTerminalConfig/iterm2_preferences</string>
+	<string>/Users/josechirivella/MyTerminalConfig/apps/iterm2_preferences</string>
 	<key>Print In Black And White</key>
 	<true/>
 	<key>SUEnableAutomaticChecks</key>
@@ -758,18 +762,18 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-10-26T15:03:55Z</date>
+	<date>2018-12-13T18:03:58Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>TabStyleWithAutomaticOption</key>
 	<integer>1</integer>
 	<key>UKCrashReporterLastCrashReportDate</key>
-	<real>1540493056</real>
+	<real>1543935488</real>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>findMode_iTerm</key>
 	<integer>0</integer>
 	<key>iTerm Version</key>
-	<string>3.2.5beta1</string>
+	<string>3.2.6</string>
 </dict>
 </plist>
